<resources>
    <string name="app_name">RestGet3</string>
    <string name="api">http://www.alumnispace.org/androidapi/api</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="regisPage">Register</string>
    <string name="LoginLabel">Login</string>
    <string name="forgotText">Forgot Password?</string>
    <string name="LoginNotif">You Are Login</string>
    <string name="homePage">Home</string>
    <string name="logoutItem">Logout</string>
    <string name="passwordhint">Password</string>
    <string name="usernamehint">Username</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="TOS">Our Term Of Services</string>
    <string name="profile_action">Profile</string>
    <string name="aroundme">Around Me</string>
    <string name="profile">Your Profile</string>
    <string name="avatarDefaultString">http://alumnispace.org/androidapi/upload/usertes.png</string>
    <string name="profileMessage">Message</string>
    <string name="ProfileImage">Update Image</string>
    <string name="sellProduct">Sell Product</string>
    <string name="select_picture">Select Picture</string>
    <string name="user_profile">User Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="UserCareer">Job Vacancy</string>
    <string name="userSetting">Profile</string>
    <string name="userProduct">Product</string>
    <string name="userLogout">Logout</string>
    <string name="userHome">Home</string>
    <string name="karirUpdate">Update Job Vacancy</string>
    <string name="karirChangeImage">Change Image</string>
    <string name="changePassword">Change Password</string>
    <string name="confirmPass">Confirm Change Password</string>
    <string name="findLocation">Search Location</string>
    <string name="contact_info">Contact Info</string>
    <string name="menu_search_user">Search User</string>
    <string name="dummy_text">Dummy text</string>
    <string name="search_header">Search User by username or name</string>
    <string name="update_produk">Update Product</string>
    <string name="app_name_alumni">Alumni Space</string>
    <string name="about_us">About Us</string>
    <string name="changeMyStatus">I have Been Graduated</string>
</resources>
