<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_home1"
            android:title="@string/userHome" />
        <item android:id="@+id/nav_user_setting" android:icon="@drawable/ic_profile3"
            android:title="@string/userSetting" />
        <item android:id="@+id/nav_career" android:icon="@drawable/ic_career2"
            android:title="@string/UserCareer" />
        <item android:id="@+id/nav_product" android:icon="@drawable/ic_trading"
            android:title="@string/userProduct" />
    </group>

    <item android:title="Logout">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@drawable/ic_logout2"
                android:title="@string/userLogout" />
        </menu>
    </item>

    <item android:title="About Us">
        <menu>
            <item android:id="@+id/nav_about_us" android:icon="@drawable/ic_about1"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>