<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top_navigation"
    android:padding="30dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/UserProfileImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/usernameProfile"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/usernameStatus"
            android:layout_toRightOf="@+id/usernameProfile"
            android:layout_toEndOf="@id/UserProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameProfile"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/messageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wallet_highlighted_text_holo_light"
            android:text="@string/profileMessage"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"

            />
        <Button
            android:id="@+id/changeProfileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wallet_holo_blue_light"
            android:text="@string/ProfileImage"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_400"
            android:text="@string/changePassword"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>
</LinearLayout>